# openenv-datacleaning-agent

./: .gitignore  Dockerfile  README.md  RL_Training_Kaggle.ipynb  __init__.py  client.py  generate_training_data.py  hackathon_web.md  inference.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  train_grpo.py  train_local.py
.github/workflows/: deploy-hf.yml
data_clean_env/: README.md  RL_Training_Colab.ipynb  RL_Training_Kaggle_vLLM.ipynb  __init__.py  client.py  models.py  pyproject.toml
data_clean_env/openenv_data_clean_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data_clean_env/server/: __init__.py  app.py  environment.py  rewards.py  tools.py
data_clean_env/tasks/: easy_messy.csv  education_messy.csv  finance_clean.csv  finance_messy.csv  healthcare_clean.csv  hr_clean.csv  logistics_messy.csv  medium_clean.csv  medium_messy.csv
server/: Dockerfile  __init__.py  app.py  environment.py  rewards.py
tasks/: easy_clean.csv  education_clean.csv  hard_clean.csv  hard_messy.csv  healthcare_messy.csv  hr_messy.csv  logistics_clean.csv
